--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
     <body>
         <h1>hb</h1>
-        <iframe frameborder="0" width="510" height="140" src="https://yc.besties.house/embed/spotify/hbishere?mini=false"></iframe>
+        <iframe frameborder="0" width="510" height="140" src="https://yc.besties.house/embed/last/hbishere?mini=false&force-theme=dark"></iframe>
     </body>
 </html>
